2024-09-11  Charlie Zender  <zender@uci.edu>

	* Implement CEWIs to quiet Clang c++17 warnings on ccc.cc

	* ccc, gsl now build with clang++ -std=c++17

	* Use double-quotes not angle brackets to #include simple, local, non-library headers

	* Cast to (prc_cmp) all operands involving complex numbers

2024-09-10  Charlie Zender  <zender@uci.edu>

	* Assume "long long" type is supported

	* Cast to (prc_cmp) all derived constants used in array initializers

	* Numerous updates to make clang18 happy

2024-02-05  Charlie Zender  <zender@uci.edu>

	* Add RRTMGP_5BND_LW grid to provide lookup table for Lili's project

2021-11-21  Charlie Zender  <zender@uci.edu>

	* Implement flx_frc_get_WiW76() interface to planck_integral_WiW76()

	* Implement planck_integral_WiW76() from Widger and Woodell (1976)

2021-06-18  Charlie Zender  <zender@uci.edu>

	* Implement user-specifiable surface emissivity via --msv_sfc for flx_sfc_lnd()

	* Switch to Homebrew

2021-04-18  Charlie Zender  <zender@uci.edu>

	* Compile with clang-11 (links, though still segfaults on MacOS), and gcc (works on cori, glace)

2021-04-17  Charlie Zender  <zender@uci.edu>

	* Fix gcc and clang OpenMP linking in c++ and mie Makefiles

	* Look in ${DATA_RT} instead of /data/zender/aca for files

2020-05-20  Charlie Zender  <zender@uci.edu>

	* Fix OpenMP with clang

	* Update copyright from --2017 to --present

2019-09-05  Charlie Zender  <zender@uci.edu>

	* Finish implementing WaB08 refractive indices as default for h2o_ice
	  War84/95 indices are still accessible via aerosol type h2o_War84

2019-09-04  Charlie Zender  <zender@uci.edu>

	* Add WaB08 refractive indices, rename old tables _War84

2019-07-10  Charlie Zender  <zender@uci.edu>

	* Add wvn_rgl grid-type to generate wavelength grids that are regularly spaced in wavenumber

2019-07-09  Charlie Zender  <zender@uci.edu>

	* Consolidate warnings for spc_bbd_cls::eval()

2015-01-22  Charlie Zender  <zender@uci.edu>
