@@ -482,6 +482,7 @@
 \newcommand{\wxmSsrhz}{W\,m$^{-2}$\,sr$^{-1}$\,Hz$^{-1}$}
 \newcommand{\wxmSsrm}{W\,m$^{-2}$\,sr$^{-1}$\,m$^{-1}$}
 \newcommand{\wxmSsrs}{W\,m$^{-2}$\,sr$^{-1}$\,s$^{-1}$}
+\newcommand{\wxmSsrxm}{W\,m$^{-2}$\,sr$^{-1}$\,(m$^{-1}$)$^{-1}$}
 \newcommand{\wxmSsrwvn}{W\,m$^{-2}$\,sr$^{-1}$\,(cm$^{-1}$)$^{-1}$}
 \newcommand{\wxmSsrum}{W\,m$^{-2}$\,sr$^{-1}$\,\um$^{-1}$}
 \newcommand{\wxmSsr}{W\,m$^{-2}$\,sr$^{-1}$}
